	  Fixed: GOTO,undefined_label made GDL crash. 
	  Several other bugfixes.

0.8.1:    Updated the configuration files (automake).

0.8.2:    added HDF support.
	  added support for several image file formats.
	  changed the code and configuration files to make GDL build 
	  also on Mac OS X.
	  bug fix for TRANSPOSE function.

0.8.3:    now netCDF and HDF can be used together (there were linker
	  errors in 0.8.2).
	  updated some obsolete commands in configure.in
	  more complete HDF support.
	  added DEFSYSV procedure.
	  addef CONJ and IMAGINARY functions.

0.8.4:    introduced _STRICT_EXTRA
	  solved remaining problem of using netCDF and HDF together.
	  HELP now reports variable names correctly.
	  the line continuation operator ($) is now also recognized in
	  interactive mode.
	  Added SORT, UNIQ, SHIFT (1 dim only), STRTOK, FILE_TEST, CD,
	  HISTOGRAM and REFORM function.
	  Added LOADCT, CD and TV procedure.
	  Basic HDF5 support.

0.8.5:    Fixed bug in STRING with PRINT or FORMAT keywords set.
          Fixed bug in STRMID with 3rd parameter undefined or not given.
	  Added MESSAGE procedure.
	  Added FILE_SEARCH, ARG_PRESENT and EOF functions.
	  Fixed bug in AssignAt functions.
	  Fixed subtle bug concerning arrays() and function() which
	  made GDL not recognize library functions when identifier was
	  used before as array.

0.8.6:    Added CONVOL function (very fast).
	  Added EXP function.
	  Added JOURNAL procedure.
          Completed SHIFT for multiple dimensions.
	  HISTOGRAM now supports REVERSE_INDICES keyword.
	  HELP,/LIB sorts now the output.
	  Made # and ## operators IDL conforming for 1 dimensional arrays.
	  N_ELEMENTS now returns LONG (before ULONG)

0.8.7:    Support for GDL_PATH (falls back to IDL_PATH) environment variable.
	  Added EXPAND_PATH, ARRAY_INDICES and REBIN function.
	  Added OPLOT procedure.
	  Bugfixes for ATAN (with 2 floats), CONVOL (1-dim kernel),
	  MESSAGE (prefix).